# NextGen

./: .env  .env.example  Dockerfile  docker-compose.yml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: pyproject.toml
backend/app/: auth.py  crypto.py  db.py  main.py
backend/app/api/: auth_routes.py  credentials.py  runs.py  workflows.py
backend/app/chat/: websocket.py
backend/app/graph/: compiler.py  schema.py  state.py  templating.py  validation.py
backend/app/graph/nodes/: __init__.py  api_node.py  code_node.py  decision_node.py  input_node.py  llm_node.py  response_node.py  retry_node.py  variable_node.py
backend/app/models/: chat.py  credential.py  run.py  variable.py  workflow.py
backend/app/providers/: base.py  ollama_provider.py
backend/app/runtime/: audit.py  executor.py  notify.py
backend/app/sandbox/: __init__.py  _worker.py  run_snippet.py
backend/tests/contract/: test_api_node.py  test_workflows_api.py
backend/tests/integration/: test_code_sandbox.py  test_core_loop.py  test_decision_branching.py  test_pause_resume.py  test_reconnect_replay.py  test_retry_node.py  test_variable_scope.py  test_variable_unset_failure.py
backend/tests/unit/: test_audit_logging.py  test_code_node.py  test_decision_node.py  test_llm_and_response_nodes.py  test_retry_node.py  test_variable_node.py
frontend/: .eslintrc.cjs  index.html  package.json  vite.config.ts
(+25 files in other folders)
