[project]
name = "nextgen-backend"
version = "0.1.0"
description = "NextGen agentic workflow builder backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "langchain>=0.3",
    "langchain-ollama>=0.2",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "cryptography>=43.0",
    "RestrictedPython>=7.2",
    "httpx[ws]>=0.27",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.9",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "black>=24.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
